--- a/src/app/shared/components/loader/loader.component.scss
+++ b/src/app/shared/components/loader/loader.component.scss
@@ -4,7 +4,7 @@
 }
 
 .loading-overlay {
-  background: #cbcbcb !important;
+  background: #cbcbcb7b !important;
   color: #fff;
   position: fixed;
   left: 0;
